--- a/src/main/resources/org/example/csc311_assignment01_gettingstarted/app-view.fxml
+++ b/src/main/resources/org/example/csc311_assignment01_gettingstarted/app-view.fxml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.example.csc311_assignment01_gettingstarted.AppController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<VBox spacing="10" alignment="CENTER"
+      xmlns="http://javafx.com/javafx/17"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="org.example.csc311_assignment01_gettingstarted.AppController"
+      stylesheets="@style.css">
+
+    <TextField fx:id="num1Field" promptText="Enter first number"/>
+    <TextField fx:id="num2Field" promptText="Enter second number"/>
+
+    <Button text="Calculate Sum" onAction="#onCalculateButtonClick"/>
 
     <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onCalculateButtonClick"/>
+
 </VBox>
